Traffic-Management-Basics/ms-demo/03-frontend-gateway/gateway-frontend.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: frontend-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "frontend.magedu.com"
    - "fe.magedu.com"
