Traffic-Management-Basics/ms-demo/03-frontend-gateway/destinationrule-frontend.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: frontend
spec:
  host: frontend
  trafficPolicy:
    tls:
      mode: DISABLE
---
